--- a/build.gradle
+++ b/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
+    compile 'io.micrometer:micrometer-registry-prometheus'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
