--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,31 @@
 buildscript {
     ext {
-        kotlinVersion = '1.2.71'
-        springBootVersion = '2.1.1.RELEASE'
+        kotlinVersion = '1.3.21'
+        springBootVersion = '2.1.3.RELEASE'
     }
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
     }
 }
 plugins {
-    id "com.google.cloud.tools.jib" version "1.0.0-rc1"
+    id 'org.springframework.boot' version '2.1.3.RELEASE'
+    id "com.google.cloud.tools.jib" version "1.0.1"
+    id 'org.asciidoctor.convert' version '1.5.3'
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'groovy'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.kubemetrics'
-version = '0.0.3-SNAPSHOT'
+version = '0.0.5-SNAPSHOT'
 sourceCompatibility = 1.8
+
 compileKotlin {
     kotlinOptions {
         freeCompilerArgs = ["-Xjsr305=strict"]
@@ -42,13 +43,77 @@ repositories {
     mavenCentral()
 }
 
-jib.to.image = "sulevsky/kubemetrics:${version}"
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-actuator')
-    implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-    implementation("org.jetbrains.kotlin:kotlin-reflect")
-    compile 'io.micrometer:micrometer-registry-prometheus'
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
+    implementation 'org.springframework.data:spring-data-mongodb'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-reflect"
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.spockframework:spock-core:1.2-groovy-2.5'
+    testImplementation 'org.spockframework:spock-spring:1.2-groovy-2.5'
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+    asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor:1.2.1.RELEASE'
+}
+
+ext {
+    snippetsDir = file('build/generated-snippets')
+}
+
+test {
+    outputs.dir snippetsDir
+}
+
+asciidoctor {
+    dependsOn test
+    backends = ['html5']
+    options doctype: 'book'
+
+    attributes = [
+            'source-highlighter': 'highlightjs',
+            'imagesdir'         : './images',
+            'toc'               : 'left',
+            'toclevels'         : 3,
+            'numbered'          : '',
+            'icons'             : 'font',
+            'setanchors'        : '',
+            'idprefix'          : '',
+            'idseparator'       : '-',
+            'docinfo1'          : '',
+            'safe-mode-unsafe'  : '',
+            'allow-uri-read'    : '',
+            'snippets'          : snippetsDir,
+            linkattrs           : true,
+            encoding            : 'utf-8',
+            'version'           : project.version,
+            resources           : file("build/resources/test"),
+            root                : file("./")
+    ]
+
+    inputs.dir snippetsDir
+    outputDir 'build/asciidoc'
+    sourceDir 'src/docs/asciidoc'
+    sources {
+        include 'index.adoc'
+    }
+}
+
+bootJar {
+    dependsOn asciidoctor
+    from("${asciidoctor.outputDir}/html5") {
+        include '**/index.html'
+        include '**/images/*'
+        into 'static/docs'
+    }
+}
+tasks.jib.dependsOn bootJar
+jib {
+    to.image = "sulevsky/kubemetrics:${version}"
+    extraDirectory = bootJar.destinationDir
+    container.entrypoint = ['java', '-jar', bootJar.archiveName]
 }
