--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,9 @@
 buildscript {
     ext {
-        kotlinVersion = '1.3.21'
         springBootVersion = '2.1.3.RELEASE'
     }
     repositories {
         mavenCentral()
-    }
-    dependencies {
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
     }
 }
 plugins {
@@ -17,27 +12,13 @@ plugins {
     id 'org.asciidoctor.convert' version '1.5.3'
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-spring'
+apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.kubemetrics'
-version = '0.0.5-SNAPSHOT'
+version = '0.0.6-SNAPSHOT'
 sourceCompatibility = 1.8
-
-compileKotlin {
-    kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        freeCompilerArgs = ["-Xjsr305=strict"]
-        jvmTarget = "1.8"
-    }
-}
 
 repositories {
     mavenCentral()
@@ -46,11 +27,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.springframework.data:spring-data-mongodb'
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.kotlin:kotlin-reflect"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.spockframework:spock-core:1.2-groovy-2.5'
